Add multiple sort section

--- a/pandas_07a.ipynb
+++ b/pandas_07a.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +98,13 @@
        "      <td>jane@outlook.com</td>\n",
        "      <td>85</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>foobar@email.com</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -106,7 +113,8 @@
        "   first   last             email  score\n",
        "0  Lorem  Ipsum   lorem@yahoo.com     88\n",
        "1   John    Doe    john@gmail.com     90\n",
-       "2   Jane    Doe  jane@outlook.com     85"
+       "2   Jane    Doe  jane@outlook.com     85\n",
+       "3    Foo    Bar  foobar@email.com     90"
       ]
      },
      "metadata": {},
@@ -115,10 +123,10 @@
    ],
    "source": [
     "people = {\n",
-    "    \"first\": [\"Lorem\", \"John\", \"Jane\"],\n",
-    "    \"last\": [\"Ipsum\", \"Doe\", \"Doe\"],\n",
-    "    \"email\": [\"lorem@yahoo.com\", \"john@gmail.com\", \"jane@outlook.com\"],\n",
-    "    \"score\": [88, 90, 85]\n",
+    "    \"first\": [\"Lorem\", \"John\", \"Jane\", \"Foo\"],\n",
+    "    \"last\": [\"Ipsum\", \"Doe\", \"Doe\", \"Bar\"],\n",
+    "    \"email\": [\"lorem@yahoo.com\", \"john@gmail.com\", \"jane@outlook.com\", \"foobar@email.com\"],\n",
+    "    \"score\": [88, 90, 85, 90]\n",
     "}\n",
     "df = pd.DataFrame(people)\n",
     "display(df)"
@@ -132,7 +140,7 @@
     "---\n",
     "## Sort Single Row or Column\n",
     "\n",
-    "An axis (defaults to the \"rows\" axis, meaning sort the rows) can be sorted using `sort_values()` and passing in the label name (either index or column name) of the axis to be sorted.  \n",
+    "An axis (defaults to the \"rows\" axis, meaning sort the rows) can be sorted using `sort_values()` and passing in the label name (either index or column name) of the axis to be sorted to the **by** parameter.\n",
     "\n",
     "Values are sorted in ascending order by default and determined by the bool **ascending** parameter.  \n",
     "\n",
@@ -143,284 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first</th>\n",
-       "      <th>last</th>\n",
-       "      <th>email</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lorem</td>\n",
-       "      <td>Ipsum</td>\n",
-       "      <td>lorem@yahoo.com</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>John</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>john@gmail.com</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jane</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>jane@outlook.com</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   first   last             email  score\n",
-       "0  Lorem  Ipsum   lorem@yahoo.com     88\n",
-       "1   John    Doe    john@gmail.com     90\n",
-       "2   Jane    Doe  jane@outlook.com     85"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first</th>\n",
-       "      <th>last</th>\n",
-       "      <th>email</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>John</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>john@gmail.com</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lorem</td>\n",
-       "      <td>Ipsum</td>\n",
-       "      <td>lorem@yahoo.com</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jane</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>jane@outlook.com</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   first   last             email  score\n",
-       "1   John    Doe    john@gmail.com     90\n",
-       "0  Lorem  Ipsum   lorem@yahoo.com     88\n",
-       "2   Jane    Doe  jane@outlook.com     85"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sort by score in descending order\n",
     "display(df)\n",
     "printhr()\n",
     "\n",
     "# Sort the rows\n",
-    "sorted_df = df.sort_values(\"score\", ascending=False)\n",
+    "sorted_df = df.sort_values(by=\"score\", ascending=False)\n",
     "display(sorted_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first</th>\n",
-       "      <th>last</th>\n",
-       "      <th>email</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lorem</td>\n",
-       "      <td>Ipsum</td>\n",
-       "      <td>lorem@yahoo.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>John</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>john@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jane</td>\n",
-       "      <td>Doe</td>\n",
-       "      <td>jane@outlook.com</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   first   last             email\n",
-       "0  Lorem  Ipsum   lorem@yahoo.com\n",
-       "1   John    Doe    john@gmail.com\n",
-       "2   Jane    Doe  jane@outlook.com"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>last</th>\n",
-       "      <th>first</th>\n",
-       "      <th>email</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ipsum</td>\n",
-       "      <td>Lorem</td>\n",
-       "      <td>lorem@yahoo.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Doe</td>\n",
-       "      <td>John</td>\n",
-       "      <td>john@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Doe</td>\n",
-       "      <td>Jane</td>\n",
-       "      <td>jane@outlook.com</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    last  first             email\n",
-       "0  Ipsum  Lorem   lorem@yahoo.com\n",
-       "1    Doe   John    john@gmail.com\n",
-       "2    Doe   Jane  jane@outlook.com"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sorting the columns (axis=1 or axis=\"columns\")\n",
     "# Create new df since we cant sort an axis containing a str and a number.\n",
@@ -435,7 +183,194 @@
     "printhr()\n",
     "\n",
     "# Sort by the \"1\" index\n",
-    "sorted_df = df2.sort_values(1, axis=\"columns\")\n",
+    "sorted_df = df2.sort_values(by=1, axis=\"columns\")\n",
+    "display(sorted_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Sort Multiple Rows or Columns\n",
+    "\n",
+    "When 2 or more values are the same, we can have a second (or more if needed) sort category that will be applied to determine how the sorting will be carried out.  \n",
+    "\n",
+    "Sorting by multiple categories can be done by passing in an iterable to the **by** parameter. Each sorting category can have their own sort order by specifying the corresponding bool value in an iterable to the **ascending** parameter.\n",
+    "\n",
+    "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.  \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>foobar@email.com</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first   last             email  score\n",
+       "0  Lorem  Ipsum   lorem@yahoo.com     88\n",
+       "1   John    Doe    john@gmail.com     90\n",
+       "2   Jane    Doe  jane@outlook.com     85\n",
+       "3    Foo    Bar  foobar@email.com     90"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>foobar@email.com</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first   last             email  score\n",
+       "3    Foo    Bar  foobar@email.com     90\n",
+       "1   John    Doe    john@gmail.com     90\n",
+       "0  Lorem  Ipsum   lorem@yahoo.com     88\n",
+       "2   Jane    Doe  jane@outlook.com     85"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Sort through score. If grades are equal, sort\n",
+    "# the rows with equal values by last name\n",
+    "display(df)\n",
+    "printhr()\n",
+    "\n",
+    "# An iterable is passed both to the by and ascending\n",
+    "# parameters to fine-tune the sorting. This effectively \n",
+    "# sorts the score in descending order (dictated by False),\n",
+    "# and sort the rows with the same scores by last name in\n",
+    "# ascending order (true)\n",
+    "sorted_df = df.sort_values([\"score\", \"last\"], ascending=[False, True])\n",
     "display(sorted_df)"
    ]
   }
