--- a/pandas_05b.ipynb
+++ b/pandas_05b.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "---\n",
     "# Modifying Data on stackoverflow Data Set\n",
+    "More examples using real world data.\n",
     "\n",
     "---"
    ]
@@ -28,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stackoverflow developer survey\n",
     "df = pd.read_csv(\"data/survey_results_public_2022.csv\", index_col=\"ResponseId\")\n",
     "schema_df = pd.read_csv(\"data/survey_results_schema.csv\", index_col=\"qname\")"
    ]
