--- a/pandas_07b.ipynb
+++ b/pandas_07b.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +188,333 @@
     "df_sorted = df.sort_values(by=[\"Country\", \"ConvertedCompYearly\"], ascending=[True, False])\n",
     "df_sorted = df_sorted[[\"Country\", \"ConvertedCompYearly\"]].head(75)\n",
     "display(df_sorted)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "**Sort salary using `nlargest()`**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MainBranch</th>\n",
+       "      <th>Employment</th>\n",
+       "      <th>RemoteWork</th>\n",
+       "      <th>CodingActivities</th>\n",
+       "      <th>EdLevel</th>\n",
+       "      <th>LearnCode</th>\n",
+       "      <th>LearnCodeOnline</th>\n",
+       "      <th>LearnCodeCoursesCert</th>\n",
+       "      <th>YearsCode</th>\n",
+       "      <th>YearsCodePro</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TimeSearching</th>\n",
+       "      <th>TimeAnswering</th>\n",
+       "      <th>Onboarding</th>\n",
+       "      <th>ProfessionalTech</th>\n",
+       "      <th>TrueFalse_1</th>\n",
+       "      <th>TrueFalse_2</th>\n",
+       "      <th>TrueFalse_3</th>\n",
+       "      <th>SurveyLength</th>\n",
+       "      <th>SurveyEase</th>\n",
+       "      <th>ConvertedCompYearly</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ResponseId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40305</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Independent contractor, freelancer, or self-em...</td>\n",
+       "      <td>Full in-person</td>\n",
+       "      <td>Freelance/contract work</td>\n",
+       "      <td>Secondary school (e.g. American high school, G...</td>\n",
+       "      <td>Other online resources (e.g., videos, blogs, f...</td>\n",
+       "      <td>Blogs;Stack Overflow;Online books;Video-based ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Less than 1 year</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60-120 minutes a day</td>\n",
+       "      <td>60-120 minutes a day</td>\n",
+       "      <td>Very long</td>\n",
+       "      <td>Innersource initiative;DevOps function;Develop...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>50000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Hybrid (some remote, some in-person)</td>\n",
+       "      <td>Hobby;Bootstrapping a business</td>\n",
+       "      <td>Bachelor’s degree (B.A., B.S., B.Eng., etc.)</td>\n",
+       "      <td>Other online resources (e.g., videos, blogs, f...</td>\n",
+       "      <td>Technical documentation;Blogs;Written Tutorial...</td>\n",
+       "      <td>Coursera;Udemy;edX</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30-60 minutes a day</td>\n",
+       "      <td>Less than 15 minutes a day</td>\n",
+       "      <td>Somewhat long</td>\n",
+       "      <td>Innersource initiative;DevOps function;Microse...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Neither easy nor difficult</td>\n",
+       "      <td>44790396.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62027</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Hybrid (some remote, some in-person)</td>\n",
+       "      <td>I don’t code outside of work</td>\n",
+       "      <td>Bachelor’s degree (B.A., B.S., B.Eng., etc.)</td>\n",
+       "      <td>Other online resources (e.g., videos, blogs, f...</td>\n",
+       "      <td>Written Tutorials;Video-based Online Courses;O...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60-120 minutes a day</td>\n",
+       "      <td>30-60 minutes a day</td>\n",
+       "      <td>Somewhat long</td>\n",
+       "      <td>DevOps function;Microservices;Developer portal...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Too long</td>\n",
+       "      <td>Neither easy nor difficult</td>\n",
+       "      <td>35000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70523</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Independent contractor, freelancer, or self-em...</td>\n",
+       "      <td>Fully remote</td>\n",
+       "      <td>Hobby;Contribute to open-source projects;Freel...</td>\n",
+       "      <td>Bachelor’s degree (B.A., B.S., B.Eng., etc.)</td>\n",
+       "      <td>Books / Physical media;Other online resources ...</td>\n",
+       "      <td>Technical documentation;Blogs;Written Tutorial...</td>\n",
+       "      <td>Udemy;Pluralsight;Udacity;Other</td>\n",
+       "      <td>22</td>\n",
+       "      <td>10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30-60 minutes a day</td>\n",
+       "      <td>Less than 15 minutes a day</td>\n",
+       "      <td>Somewhat short</td>\n",
+       "      <td>Innersource initiative;DevOps function;Microse...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>32500000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61044</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>I prefer not to say</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Primary/elementary school</td>\n",
+       "      <td>On the job training;Online Courses or Certific...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Skillsoft</td>\n",
+       "      <td>Less than 1 year</td>\n",
+       "      <td>Less than 1 year</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Too short</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>28853768.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 78 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                MainBranch   \n",
+       "ResponseId                                   \n",
+       "40305       I am a developer by profession  \\\n",
+       "202         I am a developer by profession   \n",
+       "62027       I am a developer by profession   \n",
+       "70523       I am a developer by profession   \n",
+       "61044       I am a developer by profession   \n",
+       "\n",
+       "                                                   Employment   \n",
+       "ResponseId                                                      \n",
+       "40305       Independent contractor, freelancer, or self-em...  \\\n",
+       "202                                       Employed, full-time   \n",
+       "62027                                     Employed, full-time   \n",
+       "70523       Independent contractor, freelancer, or self-em...   \n",
+       "61044                                     I prefer not to say   \n",
+       "\n",
+       "                                      RemoteWork   \n",
+       "ResponseId                                         \n",
+       "40305                             Full in-person  \\\n",
+       "202         Hybrid (some remote, some in-person)   \n",
+       "62027       Hybrid (some remote, some in-person)   \n",
+       "70523                               Fully remote   \n",
+       "61044                                        NaN   \n",
+       "\n",
+       "                                             CodingActivities   \n",
+       "ResponseId                                                      \n",
+       "40305                                 Freelance/contract work  \\\n",
+       "202                            Hobby;Bootstrapping a business   \n",
+       "62027                            I don’t code outside of work   \n",
+       "70523       Hobby;Contribute to open-source projects;Freel...   \n",
+       "61044                                                     NaN   \n",
+       "\n",
+       "                                                      EdLevel   \n",
+       "ResponseId                                                      \n",
+       "40305       Secondary school (e.g. American high school, G...  \\\n",
+       "202              Bachelor’s degree (B.A., B.S., B.Eng., etc.)   \n",
+       "62027            Bachelor’s degree (B.A., B.S., B.Eng., etc.)   \n",
+       "70523            Bachelor’s degree (B.A., B.S., B.Eng., etc.)   \n",
+       "61044                               Primary/elementary school   \n",
+       "\n",
+       "                                                    LearnCode   \n",
+       "ResponseId                                                      \n",
+       "40305       Other online resources (e.g., videos, blogs, f...  \\\n",
+       "202         Other online resources (e.g., videos, blogs, f...   \n",
+       "62027       Other online resources (e.g., videos, blogs, f...   \n",
+       "70523       Books / Physical media;Other online resources ...   \n",
+       "61044       On the job training;Online Courses or Certific...   \n",
+       "\n",
+       "                                              LearnCodeOnline   \n",
+       "ResponseId                                                      \n",
+       "40305       Blogs;Stack Overflow;Online books;Video-based ...  \\\n",
+       "202         Technical documentation;Blogs;Written Tutorial...   \n",
+       "62027       Written Tutorials;Video-based Online Courses;O...   \n",
+       "70523       Technical documentation;Blogs;Written Tutorial...   \n",
+       "61044                                                     NaN   \n",
+       "\n",
+       "                       LearnCodeCoursesCert         YearsCode   \n",
+       "ResponseId                                                      \n",
+       "40305                                   NaN  Less than 1 year  \\\n",
+       "202                      Coursera;Udemy;edX                 9   \n",
+       "62027                                   NaN                 6   \n",
+       "70523       Udemy;Pluralsight;Udacity;Other                22   \n",
+       "61044                             Skillsoft  Less than 1 year   \n",
+       "\n",
+       "                YearsCodePro  ...         TimeSearching   \n",
+       "ResponseId                    ...                         \n",
+       "40305                      2  ...  60-120 minutes a day  \\\n",
+       "202                        6  ...   30-60 minutes a day   \n",
+       "62027                      1  ...  60-120 minutes a day   \n",
+       "70523                     10  ...   30-60 minutes a day   \n",
+       "61044       Less than 1 year  ...                   NaN   \n",
+       "\n",
+       "                         TimeAnswering      Onboarding   \n",
+       "ResponseId                                               \n",
+       "40305             60-120 minutes a day       Very long  \\\n",
+       "202         Less than 15 minutes a day   Somewhat long   \n",
+       "62027              30-60 minutes a day   Somewhat long   \n",
+       "70523       Less than 15 minutes a day  Somewhat short   \n",
+       "61044                              NaN             NaN   \n",
+       "\n",
+       "                                             ProfessionalTech TrueFalse_1   \n",
+       "ResponseId                                                                  \n",
+       "40305       Innersource initiative;DevOps function;Develop...         Yes  \\\n",
+       "202         Innersource initiative;DevOps function;Microse...         Yes   \n",
+       "62027       DevOps function;Microservices;Developer portal...         Yes   \n",
+       "70523       Innersource initiative;DevOps function;Microse...         Yes   \n",
+       "61044                                                     NaN         NaN   \n",
+       "\n",
+       "           TrueFalse_2  TrueFalse_3           SurveyLength   \n",
+       "ResponseId                                                   \n",
+       "40305              Yes          Yes  Appropriate in length  \\\n",
+       "202                Yes          Yes  Appropriate in length   \n",
+       "62027              Yes          Yes               Too long   \n",
+       "70523              Yes          Yes  Appropriate in length   \n",
+       "61044              NaN          NaN              Too short   \n",
+       "\n",
+       "                            SurveyEase ConvertedCompYearly  \n",
+       "ResponseId                                                  \n",
+       "40305                             Easy          50000000.0  \n",
+       "202         Neither easy nor difficult          44790396.0  \n",
+       "62027       Neither easy nor difficult          35000000.0  \n",
+       "70523                             Easy          32500000.0  \n",
+       "61044                             Easy          28853768.0  \n",
+       "\n",
+       "[5 rows x 78 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_highest = df.nlargest(10, \"ConvertedCompYearly\").head()\n",
+    "display(df_highest)"
    ]
   }
  ],
